# simplecipher

./: .cirrus.yml  .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  SECURITY.md  simplecipher-gui.bat  simplecipher-gui.sh  test_ct  test_socks5
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  build.yml  ci.yml  fuzz.yml  platform.yml  release.yml  reusable-build.yml  security.yml  test.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/full/: AndroidManifest.xml
android/app/src/full/java/com/example/simplecipher/: QrHelperImpl.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/c/: CMakeLists.txt  jni_bridge.c  jni_exports.map
android/app/src/main/java/com/example/simplecipher/: App.java  ChatActivity.java  CrashReportActivity.java  MainActivity.java  NativeCallback.java  NetworkUtil.java  QrHelper.java  SimpleKeyboard.java  UiUtil.java
android/app/src/main/res/color/: text_radio_button.xml
android/app/src/main/res/drawable/: bg_button.xml  bg_button_secondary.xml  bg_chat_log.xml  bg_input.xml  bg_radio_button.xml  bg_send_button.xml  bg_surface.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_chat.xml  activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
android/app/src/minimal/java/com/example/simplecipher/: QrHelperImpl.java
android/gradle/: verification-metadata.xml
cmake/toolchains/: linux-aarch64.cmake  linux-x86_64.cmake  win-aarch64.cmake  win-x86_64.cmake
docs/: ANDROID.md  ASSURANCE_MAP.md  BUILDING.md  DEPLOYMENT.md  DESIGN_BOUNDARIES.md  FORMAL_ANALYSIS.md  GLOSSARY.md  HARDENING.md  PRIVACY.md  PROTOCOL.md  THREAT_MODEL.md  WALKTHROUGH.md  generate-demo.sh
docs/superpowers/plans/: 2026-03-27-docs-all-audiences.md
docs/superpowers/specs/: 2026-03-27-docs-all-audiences-design.md
scripts/: sign-release.sh
src/: args.c  args.h  cli.c  cli.h  cli_posix.c  cli_win.c  crypto.c  crypto.h  main.c  nb_io.c  nb_io.h  network.c  network.h  platform.c  platform.h  protocol.c  protocol.h  ratchet.c  ratchet.h  tui.c  tui.h  tui_posix.c  tui_win.c  verify.c  verify.h
tests/: cbmc_harness.py  dudect.h  fuzz_fingerprint.c  fuzz_frame_open.c  fuzz_identity_load.c  fuzz_sanitize.c  fuzz_socks5.c  fuzz_validate_port.c  gen_fuzz_corpus.c  mini_socks5_daemon.c  test_android.sh  test_android_emulator.sh  test_arm64_tor.sh  test_binary.sh  test_build.sh  test_cli_flags.sh  test_constant_time.c  test_helpers.sh  test_linux.sh  test_macos.sh  test_openbsd.sh  test_p2p.c  test_socks5_proxy  test_socks5_proxy.c  test_timecop.c  test_tui.sh  test_windows.ps1  test_windows_pe.sh
tests/corpus/frame_open/: deep_chain  valid_empty  valid_maxlen  valid_short  valid_short_nokey
tests/corpus/sanitize/: ansi_escape  ascii  mixed  tabs
tests/corpus/validate_port/: long_nines  mixed_80a  plus_80  spaces
